--- a/WebContent/styles/css/styles.css
+++ b/WebContent/styles/css/styles.css
@@ -5,8 +5,19 @@
 
 .formi {
 	background-color:grey;
-	width:50%;
 	padding:10px;
-	margin:auto;
+	margin-top:30px;
 	color:white;
+	height:300px;
+}
+
+.databaseout {
+	background-color:grey;
+	padding:10px;
+	height:300px;
+	margin-top:30px;
+}
+
+html {
+	background-color:#d3d2cd;
 }
